<resources>
    <string name="app_name">OT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">370586286665170</string>

    <string name="title_campaigns_list">Campaigns list</string>
    <string name="title_my_campaigns">My Campaigns</string>
    <string name="title_profile">Profile</string>
    <string name="title_collaborate">Collaborate</string>
    <string name="title_about">About</string>
    <string name="title_tutorial">Tutorial</string>

    <string name="campaign_list_open_btn">Pending</string>
    <string name="campaign_list_closed_btn">Finished</string>

    <string name="campaign_detail_mission">Mission</string>
    <string name="campaign_detail_why_support">Pourquoi nous soutenir ?</string>
    <string name="campaign_detail_support">Soutenir !</string>

    <string name="payment_confirmation_toolbar_title">MERCI</string>
    <string name="payment_confirmation_amount">1 € envoyé !</string>
    <string name="payment_confirmation_thanks">Merci d\'avoir soutenu le projet :</string>
    <string name="payment_confirmation_title">Spiral farm house</string>

    <string name="welcome_inscription_confirmed">Your inscription on 0 has been confirmed !</string>
    <string name="welcome_notification_description">Pour être informé des nouvelles campagnes (3 fois par mois), activez les notiifcations</string>
    <string name="welcome_disable_notification">I don\'t want to be informed by notification</string>


    <string name="gen_continue">Continue ></string>
    <string name="gen_confirm">Confirm ></string>


    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="city_country">City, Country</string>
    <string name="phone_number">Phone number</string>
    <string name="or">Or :</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirmation">Confirmation</string>
    <string name="code_received_by_sms">Code received by sms</string>
    <string name="send_code_back">Renvoyer le code</string>
    <string name="enable_notification">Enable notifications</string>
    <string name="welcome">Welcome</string>
    <string name="forgot_password">Forgot your password ?</string>


</resources>
