<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_campaigns_list"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_campaigns_list" />
        <item
            android:id="@+id/nav_my_campaigns"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_my_campaigns"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/nav_collaborate"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_collaborate" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_about" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/title_tutorial" />
    </group>

</menu>
