<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/enable_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="20sp"
            android:text="@string/enable_notification"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/round_corner_dark_green"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/informed_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="@dimen/sign_small_text_size"
            android:textStyle="bold"
            android:text="@string/welcome_notification_description"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:layout_above="@id/enable_notification"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18sp"
            android:text="@string/welcome_inscription_confirmed"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:layout_above="@id/informed_text"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/disable_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="@dimen/sign_small_text_size"
            android:textStyle="bold"
            android:text="@string/welcome_disable_notification"
            android:textAlignment="center"
            android:textColor="@color/dark_ultra_green"
            android:layout_below="@id/enable_notification"
            android:layout_marginTop="30dp"
            />
    </RelativeLayout>
</RelativeLayout>